# todo-app

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: app.rs  app_context.rs  errors.rs  lib.rs  main.rs  schema.rs  shared.rs
backend/src/app/: app_context.rs  schema.rs  shared.rs  user.rs
backend/src/app/todo/: todo_m.rs  todo_q.rs
backend/src/app/user/: user_m.rs
backend/src/errors/: mod.rs
backend/src/todo/: mod.rs  todo_m.rs  todo_q.rs
backend/src/user/: mod.rs  user_m.rs
frontend/: index.html
frontend/css/: style.css
frontend/js/: index.js
