[package]
name = "backend"
version = "0.1.0"
authors = ["cryarchy <crystalflow.mwangi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
juniper = "0.14.2"
failure = "0.1.6"
env_logger = "0.7.1"
log = "0.4.8"
serde = "1.0.104"
serde_json = "1.0.44"